y.output
Terminals unused in grammar

    PROGRAM
    ERROR


Grammar

    0 $accept: RULE_PROGRAM $end

    1 RULE_PROGRAM: RULE_SUBPROGRAMS_ RULE_MAIN T_BEGIN RULE_STMTS END MAIN

    2 RULE_MAIN: MAIN LPAREN RULE_ARGS RPAREN

    3 RULE_VAR: CONST RULE_TYPE RULE_ASSIGN
    4         | RULE_TYPE RULE_ASSIGN
    5         | RULE_REGISTER_DECL

    6 RULE_TYPE: INT
    7          | FLOAT
    8          | BOOL
    9          | CHAR
   10          | GRAPH
   11          | STRING

   12 RULE_ASSIGN: ID RULE_ARRAY_DECL ASSIGN RULE_ASSIGN_ SEMICOLON

   13 RULE_ASSIGN_: RULE_EXP
   14             | CCHAR
   15             | CSTRING
   16             | CARRAY

   17 RULE_ARRAY_DECL: LBRACE RULE_EXP RBRACE RULE_ARRAY_DECL
   18                | %empty

   19 RULE_REGISTER_DECL: REGISTER RULE_TYPE ID SEMICOLON

   20 RULE_EXPS: RULE_EXP
   21          | RULE_EXP RULE_EXPS

   22 RULE_LIT: CINT
   23         | CFLOAT
   24         | CBOOL

   25 RULE_O: ID RULE_O_
   26       | RULE_LIT
   27       | LPAREN RULE_EXP RPAREN
   28       | CALL ID LPAREN RULE_EXPS RPAREN

   29 RULE_O_: LBRACKET RULE_EXPS RBRACKET RULE_O_
   30        | DOT ID
   31        | %empty

   32 RULE_AU: UNIPLUS RULE_AU
   33        | UNIMINUS RULE_AU
   34        | RULE_O

   35 RULE_AP: RULE_AP POWER RULE_AP
   36        | RULE_AU

   37 RULE_AF: RULE_AF MULTIPLY RULE_AF
   38        | RULE_AF DIVIDE RULE_AF
   39        | RULE_AP

   40 RULE_AT: RULE_AT PLUS RULE_AF
   41        | RULE_AT MINUS RULE_AF
   42        | RULE_AF

   43 RULE_R: RULE_AT RULE_R_

   44 RULE_R_: LESSTHAN RULE_AT
   45        | GREATERTHAN RULE_AT
   46        | LESSTHANOREQUAL RULE_AT
   47        | GREATERTHANOREQUAL RULE_AT
   48        | EQUALS RULE_AT
   49        | NOTEQUAL RULE_AT
   50        | %empty

   51 RULE_LU: NOT RULE_R
   52        | RULE_R

   53 RULE_LC: RULE_LC AND RULE_LC
   54        | RULE_LU

   55 RULE_EXP: RULE_EXP OR RULE_EXP
   56         | RULE_LC

   57 RULE_ARGS: TYPE ID
   58          | TYPE ID COMMA RULE_ARGS
   59          | %empty

   60 RULE_STMTS: RULE_STMT
   61           | RULE_STMT RULE_STMTS

   62 RULE_STMT: RULE_VAR
   63          | RULE_ASSIGN
   64          | ID LPAREN RULE_EXPS RPAREN SEMICOLON
   65          | RULE_SUBPROGRAM
   66          | RULE_IF
   67          | RULE_SWITCH
   68          | RULE_FOR
   69          | RULE_LOOP
   70          | RULE_WHEN
   71          | RULE_UNLESS
   72          | RULE_PRINT

   73 RULE_SUBPROGRAMS: RULE_SUBPROGRAM
   74                 | RULE_SUBPROGRAM RULE_SUBPROGRAMS

   75 RULE_SUBPROGRAMS_: RULE_SUBPROGRAMS
   76                  | %empty

   77 RULE_SUBPROGRAM: RULE_FUNCTION
   78                | RULE_PROCEDURE

   79 RULE_FUNCTION: FUNCTION TYPE ID LPAREN RULE_ARGS RPAREN T_BEGIN RULE_STMTS RULE_RETURN END ID

   80 RULE_RETURN: RETURN RULE_EXP SEMICOLON
   81            | %empty

   82 RULE_PROCEDURE: PROCEDURE ID LPAREN RULE_ARGS RPAREN T_BEGIN RULE_STMTS END ID

   83 RULE_IF: IF LPAREN RULE_EXP RPAREN RULE_STMTS RULE_ELIF RULE_ELSE END IF

   84 RULE_ELIF: ELIF LPAREN RULE_EXP RPAREN RULE_STMTS ELIF
   85          | %empty

   86 RULE_ELSE: ELSE RULE_STMTS
   87          | %empty

   88 RULE_SWITCH: SWITCH LPAREN RULE_VAR RPAREN RULE_CASE RULE_DEFAULT END SWITCH

   89 RULE_CASE: CASE LPAREN RULE_EXP LPAREN COLON RULE_STMTS BREAK CASE
   90          | %empty

   91 RULE_DEFAULT: DEFAULT COLON RULE_STMTS BREAK
   92             | %empty

   93 RULE_FOR: FOR LPAREN RULE_ASSIGN SEMICOLON RULE_EXP SEMICOLON RULE_EXP RPAREN RULE_STMTS END FOR

   94 RULE_LOOP: LOOP RULE_STMTS END LOOP

   95 RULE_WHEN: EXIT WHEN RULE_EXP

   96 RULE_UNLESS: UNLESS RULE_EXP DO RULE_STMT

   97 RULE_PRINT: PRINT LPAREN RULE_PRINT_ RPAREN SEMICOLON

   98 RULE_PRINT_: RULE_EXP
   99            | CCHAR
  100            | CSTRING
  101            | CARRAY


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID (258) 12 19 25 28 30 57 58 64 79 82
    CINT (259) 22
    CFLOAT (260) 23
    CBOOL (261) 24
    CCHAR (262) 14 99
    CSTRING (263) 15 100
    CARRAY (264) 16 101
    INT (265) 6
    FLOAT (266) 7
    BOOL (267) 8
    CHAR (268) 9
    GRAPH (269) 10
    STRING (270) 11
    CONST (271) 3
    REGISTER (272) 19
    MAIN (273) 1 2
    T_BEGIN (274) 1 79 82
    END (275) 1 79 82 83 88 93 94
    IF (276) 83
    ELIF (277) 84
    ELSE (278) 86
    SWITCH (279) 88
    CASE (280) 89
    DEFAULT (281) 91
    FOR (282) 93
    LOOP (283) 94
    EXIT (284) 95
    WHEN (285) 95
    UNLESS (286) 96
    PRINT (287) 97
    NOT (288) 51
    LBRACE (289) 17
    RBRACE (290) 17
    SEMICOLON (291) 12 19 64 80 93 97
    COMMA (292) 58
    COLON (293) 89 91
    DO (294) 96
    TYPE (295) 57 58 79
    BREAK (296) 89 91
    PROCEDURE (297) 82
    FUNCTION (298) 79
    RETURN (299) 80
    DOT (300) 30
    ASSIGN (301) 12
    LBRACKET (302) 29
    RBRACKET (303) 29
    CALL (304) 28
    PROGRAM (305)
    ERROR (306)
    OR (307) 55
    AND (308) 53
    PLUS (309) 40
    MINUS (310) 41
    MULTIPLY (311) 37
    DIVIDE (312) 38
    POWER (313) 35
    LESSTHAN (314) 44
    GREATERTHAN (315) 45
    LESSTHANOREQUAL (316) 46
    GREATERTHANOREQUAL (317) 47
    EQUALS (318) 48
    NOTEQUAL (319) 49
    LPAREN (320) 2 27 28 64 79 82 83 84 88 89 93 97
    RPAREN (321) 2 27 28 64 79 82 83 84 88 93 97
    UNIPLUS (322) 32
    UNIMINUS (323) 33


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    RULE_PROGRAM (70)
        on left: 1
        on right: 0
    RULE_MAIN (71)
        on left: 2
        on right: 1
    RULE_VAR (72)
        on left: 3 4 5
        on right: 62 88
    RULE_TYPE (73)
        on left: 6 7 8 9 10 11
        on right: 3 4 19
    RULE_ASSIGN (74)
        on left: 12
        on right: 3 4 63 93
    RULE_ASSIGN_ (75)
        on left: 13 14 15 16
        on right: 12
    RULE_ARRAY_DECL (76)
        on left: 17 18
        on right: 12 17
    RULE_REGISTER_DECL (77)
        on left: 19
        on right: 5
    RULE_EXPS (78)
        on left: 20 21
        on right: 21 28 29 64
    RULE_LIT (79)
        on left: 22 23 24
        on right: 26
    RULE_O (80)
        on left: 25 26 27 28
        on right: 34
    RULE_O_ (81)
        on left: 29 30 31
        on right: 25 29
    RULE_AU (82)
        on left: 32 33 34
        on right: 32 33 36
    RULE_AP (83)
        on left: 35 36
        on right: 35 39
    RULE_AF (84)
        on left: 37 38 39
        on right: 37 38 40 41 42
    RULE_AT (85)
        on left: 40 41 42
        on right: 40 41 43 44 45 46 47 48 49
    RULE_R (86)
        on left: 43
        on right: 51 52
    RULE_R_ (87)
        on left: 44 45 46 47 48 49 50
        on right: 43
    RULE_LU (88)
        on left: 51 52
        on right: 54
    RULE_LC (89)
        on left: 53 54
        on right: 53 56
    RULE_EXP (90)
        on left: 55 56
        on right: 13 17 20 21 27 55 80 83 84 89 93 95 96 98
    RULE_ARGS (91)
        on left: 57 58 59
        on right: 2 58 79 82
    RULE_STMTS (92)
        on left: 60 61
        on right: 1 61 79 82 83 84 86 89 91 93 94
    RULE_STMT (93)
        on left: 62 63 64 65 66 67 68 69 70 71 72
        on right: 60 61 96
    RULE_SUBPROGRAMS (94)
        on left: 73 74
        on right: 74 75
    RULE_SUBPROGRAMS_ (95)
        on left: 75 76
        on right: 1
    RULE_SUBPROGRAM (96)
        on left: 77 78
        on right: 65 73 74
    RULE_FUNCTION (97)
        on left: 79
        on right: 77
    RULE_RETURN (98)
        on left: 80 81
        on right: 79
    RULE_PROCEDURE (99)
        on left: 82
        on right: 78
    RULE_IF (100)
        on left: 83
        on right: 66
    RULE_ELIF (101)
        on left: 84 85
        on right: 83
    RULE_ELSE (102)
        on left: 86 87
        on right: 83
    RULE_SWITCH (103)
        on left: 88
        on right: 67
    RULE_CASE (104)
        on left: 89 90
        on right: 88
    RULE_DEFAULT (105)
        on left: 91 92
        on right: 88
    RULE_FOR (106)
        on left: 93
        on right: 68
    RULE_LOOP (107)
        on left: 94
        on right: 69
    RULE_WHEN (108)
        on left: 95
        on right: 70
    RULE_UNLESS (109)
        on left: 96
        on right: 71
    RULE_PRINT (110)
        on left: 97
        on right: 72
    RULE_PRINT_ (111)
        on left: 98 99 100 101
        on right: 97


State 0

    0 $accept: . RULE_PROGRAM $end

    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2

    $default  reduce using rule 76 (RULE_SUBPROGRAMS_)

    RULE_PROGRAM       go to state 3
    RULE_SUBPROGRAMS   go to state 4
    RULE_SUBPROGRAMS_  go to state 5
    RULE_SUBPROGRAM    go to state 6
    RULE_FUNCTION      go to state 7
    RULE_PROCEDURE     go to state 8


State 1

   82 RULE_PROCEDURE: PROCEDURE . ID LPAREN RULE_ARGS RPAREN T_BEGIN RULE_STMTS END ID

    ID  shift, and go to state 9


State 2

   79 RULE_FUNCTION: FUNCTION . TYPE ID LPAREN RULE_ARGS RPAREN T_BEGIN RULE_STMTS RULE_RETURN END ID

    TYPE  shift, and go to state 10


State 3

    0 $accept: RULE_PROGRAM . $end

    $end  shift, and go to state 11


State 4

   75 RULE_SUBPROGRAMS_: RULE_SUBPROGRAMS .

    $default  reduce using rule 75 (RULE_SUBPROGRAMS_)


State 5

    1 RULE_PROGRAM: RULE_SUBPROGRAMS_ . RULE_MAIN T_BEGIN RULE_STMTS END MAIN

    MAIN  shift, and go to state 12

    RULE_MAIN  go to state 13


State 6

   73 RULE_SUBPROGRAMS: RULE_SUBPROGRAM .
   74                 | RULE_SUBPROGRAM . RULE_SUBPROGRAMS

    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2

    $default  reduce using rule 73 (RULE_SUBPROGRAMS)

    RULE_SUBPROGRAMS  go to state 14
    RULE_SUBPROGRAM   go to state 6
    RULE_FUNCTION     go to state 7
    RULE_PROCEDURE    go to state 8


State 7

   77 RULE_SUBPROGRAM: RULE_FUNCTION .

    $default  reduce using rule 77 (RULE_SUBPROGRAM)


State 8

   78 RULE_SUBPROGRAM: RULE_PROCEDURE .

    $default  reduce using rule 78 (RULE_SUBPROGRAM)


State 9

   82 RULE_PROCEDURE: PROCEDURE ID . LPAREN RULE_ARGS RPAREN T_BEGIN RULE_STMTS END ID

    LPAREN  shift, and go to state 15


State 10

   79 RULE_FUNCTION: FUNCTION TYPE . ID LPAREN RULE_ARGS RPAREN T_BEGIN RULE_STMTS RULE_RETURN END ID

    ID  shift, and go to state 16


State 11

    0 $accept: RULE_PROGRAM $end .

    $default  accept


State 12

    2 RULE_MAIN: MAIN . LPAREN RULE_ARGS RPAREN

    LPAREN  shift, and go to state 17


State 13

    1 RULE_PROGRAM: RULE_SUBPROGRAMS_ RULE_MAIN . T_BEGIN RULE_STMTS END MAIN

    T_BEGIN  shift, and go to state 18


State 14

   74 RULE_SUBPROGRAMS: RULE_SUBPROGRAM RULE_SUBPROGRAMS .

    $default  reduce using rule 74 (RULE_SUBPROGRAMS)


State 15

   82 RULE_PROCEDURE: PROCEDURE ID LPAREN . RULE_ARGS RPAREN T_BEGIN RULE_STMTS END ID

    TYPE  shift, and go to state 19

    $default  reduce using rule 59 (RULE_ARGS)

    RULE_ARGS  go to state 20


State 16

   79 RULE_FUNCTION: FUNCTION TYPE ID . LPAREN RULE_ARGS RPAREN T_BEGIN RULE_STMTS RULE_RETURN END ID

    LPAREN  shift, and go to state 21


State 17

    2 RULE_MAIN: MAIN LPAREN . RULE_ARGS RPAREN

    TYPE  shift, and go to state 19

    $default  reduce using rule 59 (RULE_ARGS)

    RULE_ARGS  go to state 22


State 18

    1 RULE_PROGRAM: RULE_SUBPROGRAMS_ RULE_MAIN T_BEGIN . RULE_STMTS END MAIN

    ID         shift, and go to state 23
    INT        shift, and go to state 24
    FLOAT      shift, and go to state 25
    BOOL       shift, and go to state 26
    CHAR       shift, and go to state 27
    GRAPH      shift, and go to state 28
    STRING     shift, and go to state 29
    CONST      shift, and go to state 30
    REGISTER   shift, and go to state 31
    IF         shift, and go to state 32
    SWITCH     shift, and go to state 33
    FOR        shift, and go to state 34
    LOOP       shift, and go to state 35
    EXIT       shift, and go to state 36
    UNLESS     shift, and go to state 37
    PRINT      shift, and go to state 38
    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2

    RULE_VAR            go to state 39
    RULE_TYPE           go to state 40
    RULE_ASSIGN         go to state 41
    RULE_REGISTER_DECL  go to state 42
    RULE_STMTS          go to state 43
    RULE_STMT           go to state 44
    RULE_SUBPROGRAM     go to state 45
    RULE_FUNCTION       go to state 7
    RULE_PROCEDURE      go to state 8
    RULE_IF             go to state 46
    RULE_SWITCH         go to state 47
    RULE_FOR            go to state 48
    RULE_LOOP           go to state 49
    RULE_WHEN           go to state 50
    RULE_UNLESS         go to state 51
    RULE_PRINT          go to state 52


State 19

   57 RULE_ARGS: TYPE . ID
   58          | TYPE . ID COMMA RULE_ARGS

    ID  shift, and go to state 53


State 20

   82 RULE_PROCEDURE: PROCEDURE ID LPAREN RULE_ARGS . RPAREN T_BEGIN RULE_STMTS END ID

    RPAREN  shift, and go to state 54


State 21

   79 RULE_FUNCTION: FUNCTION TYPE ID LPAREN . RULE_ARGS RPAREN T_BEGIN RULE_STMTS RULE_RETURN END ID

    TYPE  shift, and go to state 19

    $default  reduce using rule 59 (RULE_ARGS)

    RULE_ARGS  go to state 55


State 22

    2 RULE_MAIN: MAIN LPAREN RULE_ARGS . RPAREN

    RPAREN  shift, and go to state 56


State 23

   12 RULE_ASSIGN: ID . RULE_ARRAY_DECL ASSIGN RULE_ASSIGN_ SEMICOLON
   64 RULE_STMT: ID . LPAREN RULE_EXPS RPAREN SEMICOLON

    LBRACE  shift, and go to state 57
    LPAREN  shift, and go to state 58

    $default  reduce using rule 18 (RULE_ARRAY_DECL)

    RULE_ARRAY_DECL  go to state 59


State 24

    6 RULE_TYPE: INT .

    $default  reduce using rule 6 (RULE_TYPE)


State 25

    7 RULE_TYPE: FLOAT .

    $default  reduce using rule 7 (RULE_TYPE)


State 26

    8 RULE_TYPE: BOOL .

    $default  reduce using rule 8 (RULE_TYPE)


State 27

    9 RULE_TYPE: CHAR .

    $default  reduce using rule 9 (RULE_TYPE)


State 28

   10 RULE_TYPE: GRAPH .

    $default  reduce using rule 10 (RULE_TYPE)


State 29

   11 RULE_TYPE: STRING .

    $default  reduce using rule 11 (RULE_TYPE)


State 30

    3 RULE_VAR: CONST . RULE_TYPE RULE_ASSIGN

    INT     shift, and go to state 24
    FLOAT   shift, and go to state 25
    BOOL    shift, and go to state 26
    CHAR    shift, and go to state 27
    GRAPH   shift, and go to state 28
    STRING  shift, and go to state 29

    RULE_TYPE  go to state 60


State 31

   19 RULE_REGISTER_DECL: REGISTER . RULE_TYPE ID SEMICOLON

    INT     shift, and go to state 24
    FLOAT   shift, and go to state 25
    BOOL    shift, and go to state 26
    CHAR    shift, and go to state 27
    GRAPH   shift, and go to state 28
    STRING  shift, and go to state 29

    RULE_TYPE  go to state 61


State 32

   83 RULE_IF: IF . LPAREN RULE_EXP RPAREN RULE_STMTS RULE_ELIF RULE_ELSE END IF

    LPAREN  shift, and go to state 62


State 33

   88 RULE_SWITCH: SWITCH . LPAREN RULE_VAR RPAREN RULE_CASE RULE_DEFAULT END SWITCH

    LPAREN  shift, and go to state 63


State 34

   93 RULE_FOR: FOR . LPAREN RULE_ASSIGN SEMICOLON RULE_EXP SEMICOLON RULE_EXP RPAREN RULE_STMTS END FOR

    LPAREN  shift, and go to state 64


State 35

   94 RULE_LOOP: LOOP . RULE_STMTS END LOOP

    ID         shift, and go to state 23
    INT        shift, and go to state 24
    FLOAT      shift, and go to state 25
    BOOL       shift, and go to state 26
    CHAR       shift, and go to state 27
    GRAPH      shift, and go to state 28
    STRING     shift, and go to state 29
    CONST      shift, and go to state 30
    REGISTER   shift, and go to state 31
    IF         shift, and go to state 32
    SWITCH     shift, and go to state 33
    FOR        shift, and go to state 34
    LOOP       shift, and go to state 35
    EXIT       shift, and go to state 36
    UNLESS     shift, and go to state 37
    PRINT      shift, and go to state 38
    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2

    RULE_VAR            go to state 39
    RULE_TYPE           go to state 40
    RULE_ASSIGN         go to state 41
    RULE_REGISTER_DECL  go to state 42
    RULE_STMTS          go to state 65
    RULE_STMT           go to state 44
    RULE_SUBPROGRAM     go to state 45
    RULE_FUNCTION       go to state 7
    RULE_PROCEDURE      go to state 8
    RULE_IF             go to state 46
    RULE_SWITCH         go to state 47
    RULE_FOR            go to state 48
    RULE_LOOP           go to state 49
    RULE_WHEN           go to state 50
    RULE_UNLESS         go to state 51
    RULE_PRINT          go to state 52


State 36

   95 RULE_WHEN: EXIT . WHEN RULE_EXP

    WHEN  shift, and go to state 66


State 37

   96 RULE_UNLESS: UNLESS . RULE_EXP DO RULE_STMT

    ID        shift, and go to state 67
    CINT      shift, and go to state 68
    CFLOAT    shift, and go to state 69
    CBOOL     shift, and go to state 70
    NOT       shift, and go to state 71
    CALL      shift, and go to state 72
    LPAREN    shift, and go to state 73
    UNIPLUS   shift, and go to state 74
    UNIMINUS  shift, and go to state 75

    RULE_LIT  go to state 76
    RULE_O    go to state 77
    RULE_AU   go to state 78
    RULE_AP   go to state 79
    RULE_AF   go to state 80
    RULE_AT   go to state 81
    RULE_R    go to state 82
    RULE_LU   go to state 83
    RULE_LC   go to state 84
    RULE_EXP  go to state 85


State 38

   97 RULE_PRINT: PRINT . LPAREN RULE_PRINT_ RPAREN SEMICOLON

    LPAREN  shift, and go to state 86


State 39

   62 RULE_STMT: RULE_VAR .

    $default  reduce using rule 62 (RULE_STMT)


State 40

    4 RULE_VAR: RULE_TYPE . RULE_ASSIGN

    ID  shift, and go to state 87

    RULE_ASSIGN  go to state 88


State 41

   63 RULE_STMT: RULE_ASSIGN .

    $default  reduce using rule 63 (RULE_STMT)


State 42

    5 RULE_VAR: RULE_REGISTER_DECL .

    $default  reduce using rule 5 (RULE_VAR)


State 43

    1 RULE_PROGRAM: RULE_SUBPROGRAMS_ RULE_MAIN T_BEGIN RULE_STMTS . END MAIN

    END  shift, and go to state 89


State 44

   60 RULE_STMTS: RULE_STMT .
   61           | RULE_STMT . RULE_STMTS

    ID         shift, and go to state 23
    INT        shift, and go to state 24
    FLOAT      shift, and go to state 25
    BOOL       shift, and go to state 26
    CHAR       shift, and go to state 27
    GRAPH      shift, and go to state 28
    STRING     shift, and go to state 29
    CONST      shift, and go to state 30
    REGISTER   shift, and go to state 31
    IF         shift, and go to state 32
    SWITCH     shift, and go to state 33
    FOR        shift, and go to state 34
    LOOP       shift, and go to state 35
    EXIT       shift, and go to state 36
    UNLESS     shift, and go to state 37
    PRINT      shift, and go to state 38
    PROCEDURE  shift, and go to state 1
    FUNCTION   shift, and go to state 2

    $default  reduce using rule 60 (RULE_STMTS)

    RULE_VAR            go to state 39
    RULE_TYPE           go to state 40
    RULE_ASSIGN         go to state 41
    RULE_REGISTER_DECL  go to state 42
    RULE_STMTS          go to state 90
    RULE_STMT           go to state 44
    RULE_SUBPROGRAM     go to state 45
    RULE_FUNCTION       go to state 7
    RULE_PROCEDURE      go to state 8
    RULE_IF             go to state 46
    RULE_SWITCH         go to state 47
    RULE_FOR            go to state 48
    RULE_LOOP           go to state 49
    RULE_WHEN           go to state 50
    RULE_UNLESS         go to state 51
    RULE_PRINT          go to state 52


State 45

   65 RULE_STMT: RULE_SUBPROGRAM .

    $default  reduce using rule 65 (RULE_STMT)


State 46

   66 RULE_STMT: RULE_IF .

    $default  reduce using rule 66 (RULE_STMT)


State 47

   67 RULE_STMT: RULE_SWITCH .

    $default  reduce using rule 67 (RULE_STMT)


State 48

   68 RULE_STMT: RULE_FOR .

    $default  reduce using rule 68 (RULE_STMT)


State 49

   69 RULE_STMT: RULE_LOOP .

    $default  reduce using rule 69 (RULE_STMT)


State 50

   70 RULE_STMT: RULE_WHEN .

    $default  reduce using rule 70 (RULE_STMT)


State 51

   71 RULE_STMT: RULE_UNLESS .

    $default  reduce using rule 71 (RULE_STMT)


State 52

   72 RULE_STMT: RULE_PRINT .

    $default  reduce using rule 72 (RULE_STMT)


State 53

   57 RULE_ARGS: TYPE ID .
   58          | TYPE ID . COMMA RULE_ARGS

    COMMA  shift, and go to state 91

    $default  reduce using rule 57 (RULE_ARGS)


State 54

   82 RULE_PROCEDURE: PROCEDURE ID LPAREN RULE_ARGS RPAREN . T_BEGIN RULE_STMTS END ID

    T_BEGIN  shift, and go to state 92


State 55

   79 RULE_FUNCTION: FUNCTION TYPE ID LPAREN RULE_ARGS . RPAREN T_BEGIN RULE_STMTS RULE_RETURN END ID

    RPAREN  shift, and go to state 93


State 56

    2 RULE_MAIN: MAIN LPAREN RULE_ARGS RPAREN .

    $default  reduce using rule 2 (RULE_MAIN)


State 57

   17 RULE_ARRAY_DECL: LBRACE . RULE_EXP RBRACE RULE_ARRAY_DECL

    ID        shift, and go to state 67
    CINT      shift, and go to state 68
    CFLOAT    shift, and go to state 69
    CBOOL     shift, and go to state 70
    NOT       shift, and go to state 71
    CALL      shift, and go to state 72
    LPAREN    shift, and go to state 73
    UNIPLUS   shift, and go to state 74
    UNIMINUS  shift, and go to state 75

    RULE_LIT  go to state 76
    RULE_O    go to state 77
    RULE_AU   go to state 78
    RULE_AP   go to state 79
    RULE_AF   go to state 80
    RULE_AT   go to state 81
    RULE_R    go to state 82
    RULE_LU   go to state 83
    RULE_LC   go to state 84
    RULE_EXP  go to state 94


State 58

   64 RULE_STMT: ID LPAREN . RULE_EXPS RPAREN SEMICOLON

    ID        shift, and go to state 67
    CINT      shift, and go to state 68
    CFLOAT    shift, and go to state 69
    CBOOL     shift, and go to state 70
    NOT       shift, and go to state 71
    CALL      shift, and go to state 72
    LPAREN    shift, and go to state 73
    UNIPLUS   shift, and go to state 74
    UNIMINUS  shift, and go to state 75

    RULE_EXPS  go to state 95
    RULE_LIT   go to state 76
    RULE_O     go to state 77
    RULE_AU    go to state 78
    RULE_AP    go to state 79
    RULE_AF    go to state 80
    RULE_AT    go to state 81
    RULE_R     go to state 82
    RULE_LU    go to state 83
    RULE_LC    go to state 84
    RULE_EXP   go to state 96


State 59

   12 RULE_ASSIGN: ID RULE_ARRAY_DECL . ASSIGN RULE_ASSIGN_ SEMICOLON

    ASSIGN  shift, and go to state 97


State 60

    3 RULE_VAR: CONST RULE_TYPE . RULE_ASSIGN

    ID  shift, and go to state 87

    RULE_ASSIGN  go to state 98


State 61

   19 RULE_REGISTER_DECL: REGISTER RULE_TYPE . ID SEMICOLON

    ID  shift, and go to state 99


State 62

   83 RULE_IF: IF LPAREN . RULE_EXP RPAREN RULE_STMTS RULE_ELIF RULE_ELSE END IF

    ID        shift, and go to state 67
    CINT      shift, and go to state 68
    CFLOAT    shift, and go to state 69
    CBOOL     shift, and go to state 70
    NOT       shift, and go to state 71
    CALL      shift, and go to state 72
    LPAREN    shift, and go to state 73
    UNIPLUS   shift, and go to state 74
    UNIMINUS  shift, and go to state 75

    RULE_LIT  go to state 76
    RULE_O    go to state 77
    RULE_AU   go to state 78
    RULE_AP   go to state 79
    RULE_AF   go to state 80
    RULE_AT   go to state 81
    RULE_R    go to state 82
    RULE_LU   go to state 83
    RULE_LC   go to state 84
    RULE_EXP  go to state 100


State 63
